# cheviot-kernel

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
boards/raspberry_pi_1/: Makefile.am  arm.S  aux_uart.c  debug.c  exception.c  globals.c  gpio.c  idle.c  init_arm.c  init_proc.c  init_root.c  init_vm.c  interrupt.c  linker.ls  main.c  pmap.c  proc.c  signals.c  timer.c  vectors.S
boards/raspberry_pi_1/h/kernel/board/: arm.i  boot.h  globals.h  gpio.h  init.h  interrupt.h  timer.h
boards/raspberry_pi_1/include/kernel/board/: arm.h  aux_uart.h  elf.h  globals.h  peripheral_base.h  pmap.h  task.h  task.i
boards/raspberry_pi_4/: Makefile.am  arm.S  aux_uart.c  clock.c  context.S  context.c  copyin.S  debug.c  exception.c  globals.c  gpio.c  idle.c  init_arm.c  init_proc.c  init_root.c  init_vm.c  interrupt.c  mailbox.c  main.c  pmap.c  proc.c  shutdown.c  signals.c  syscall_trace.c  timer.c  ucontext.c  vectors.S
boards/raspberry_pi_4/h/kernel/board/: arm.h  arm.i  aux_uart.h  boot.h  elf.h  globals.h  gpio.h  init.h  interrupt.h  macros.i  peripheral_base.h  pmap.h  task.h  task.i  timer.h
boards/raspberry_pi_4/include/kernel/: arch.h
boards/raspberry_pi_4/include/kernel/board/: arm.h  arm.i  aux_uart.h  globals.h  init.h  macros.i  pmap.h  task.h
debug/: Makefile.am  debug.c  dumpkerneltables.c
fs/: Makefile.am  access.c  bdflush.c  block.c  cache.c  cache_writethru.c.bak  char.c  close.c  dir.c  dnlc.c  exec.c  exec_bak.c  exec_root.c  file.c  filedesc.c  filp.c  fproc.c  globals.c  id.c  init.c  ioctl.c  kqueue.c  link.c  lookup.c  mknod.c  mount.c  msg.c  msgport.c  open.c  pipe.c  poll.c  read.c  rename.c  revoke.c  seek.c  select.c  signal.c  stat.c  superblock.c  symlink.c  (+5 more)
h/kernel/: dbg.h  elf.h  filesystem.h  globals.h  interrupt.h  kqueue.h  lists.h  msg.h  proc.h  signal.h  sync.h  timer.h  utility.h  vm.h
include/kernel/: dbg.h  dbg_config.h  error.h  filesystem.h  globals.h  hash.h  interrupt.h  kqueue.h  lists.h  msg.h  proc.h  signal.h  socket.h  sync.h  sysinfo.h  timer.h  types.h  vm.h
proc/: Makefile.am  globals.c  id.c  interrupt.c  pid.c  privileges.c  proc.c  reboot.c  rwlock.c  sched.c  signal.c  sleep_wakeup_bkl.c  sysconf.c  thread.c  thread_cond.c  thread_events.c  thread_futex.c  thread_mutex.c  thread_rwlock.c  thread_sched.c  timer.c  usage.c
socket/: Makefile.am  host.c  recv.c  send.c  socket.c  socketpair.c  sockname.c  sockopt.c
trampoline/: README.md  trampoline.S
utility/: Makefile.am  doprintf.c  lookup3.c  string.c
vm/: Makefile.am  as.c  bounds.c  globals.c  ipcopy.c  memregion.c  mmap.c  page.c  pagefault.c  segment.c  vm.c
