
kernel_SOURCES +=         \
  proc/globals.c          \
  proc/id.c               \
  proc/interrupt.c        \
  proc/pid.c              \
  proc/privileges.c       \
  proc/proc.c             \
  proc/rwlock.c           \
  proc/sched.c            \
  proc/signal.c           \
  proc/sleep_wakeup_bkl.c \
  proc/sysconf.c          \
  proc/thread.c           \
  proc/thread_events.c    \
  proc/thread_futex.c     \
  proc/thread_sched.c     \
  proc/timer.c            \
  proc/usage.c

