
kernel_SOURCES += \
  boards/raspberry_pi_1/arm.S           \
  boards/raspberry_pi_1/aux_uart.c      \
  boards/raspberry_pi_1/debug.c         \
  boards/raspberry_pi_1/exception.c     \
  boards/raspberry_pi_1/globals.c       \
  boards/raspberry_pi_1/gpio.c          \
  boards/raspberry_pi_1/idle.c          \
  boards/raspberry_pi_1/init_arm.c      \
  boards/raspberry_pi_1/init_proc.c     \
  boards/raspberry_pi_1/init_root.c     \
  boards/raspberry_pi_1/init_vm.c       \
  boards/raspberry_pi_1/interrupt.c     \
  boards/raspberry_pi_1/main.c          \
  boards/raspberry_pi_1/pmap.c          \
  boards/raspberry_pi_1/proc.c          \
  boards/raspberry_pi_1/signals.c       \
  boards/raspberry_pi_1/timer.c         \
  boards/raspberry_pi_1/vectors.S

