
kernel_SOURCES += \
  boards/raspberry_pi_4/arm.S           \
  boards/raspberry_pi_4/aux_uart.c      \
  boards/raspberry_pi_4/debug.c         \
  boards/raspberry_pi_4/exception.c     \
  boards/raspberry_pi_4/globals.c       \
  boards/raspberry_pi_4/gpio.c          \
  boards/raspberry_pi_4/idle.c          \
  boards/raspberry_pi_4/init_arm.c      \
  boards/raspberry_pi_4/init_proc.c     \
  boards/raspberry_pi_4/init_root.c     \
  boards/raspberry_pi_4/init_vm.c       \
  boards/raspberry_pi_4/interrupt.c     \
  boards/raspberry_pi_4/mailbox.c       \
  boards/raspberry_pi_4/main.c          \
  boards/raspberry_pi_4/pmap.c          \
  boards/raspberry_pi_4/proc.c          \
  boards/raspberry_pi_4/signals.c       \
  boards/raspberry_pi_4/syscall_trace.c \
  boards/raspberry_pi_4/timer.c         \
  boards/raspberry_pi_4/vectors.S
  

